--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>GitHub Tutorials</h1>
-
+  <p> welcome back aliens this is page for you to guide how to make git easier </p>
 
 </body>
 </html>
