--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 
 <h1>GitHub Tutorials</h1>
   <p> welcome back aliens this is page for you to guide how to make git easier </p>
+  <p> Praveen kumar vadde </p>
 
 </body>
 </html>
